@@ -18,6 +18,8 @@ linux (4.18~rc7-1~exp1) UNRELEASED; urgency=medium
     - Build with KBUILD_VERBOSE=1 by default
     - objtool, usbip: Build with V=1 by default
   * cpupower: Fix handling of noopt and nostrip build options
+  * debian/bin/gencontrol_signed.py: Add certificate fingerprints to template
+    metadata
 
  -- Uwe Kleine-König <ukleinek@debian.org>  Sat, 21 Jul 2018 16:52:01 +0200
 
